force-app/main/default/objects/ProjectAccountServiceAccess__c/ProjectAccountServiceAccess__c.object-meta.xml
<CustomObject>
    <description>ProjectAccountServiceAccess</description>
    <label>Project Account Service Access</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>ProjectAccountServiceAccess Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Account Service Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>