force-app/main/default/objects/ProjectAccountServiceAccess__c/fields/AccessLevel__c.field-meta.xml
<CustomField>
    <fullName>AccessLevel__c</fullName>
    <label>AccessLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Access</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>