force-app/main/default/objects/ProjectAccountServiceAccess__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Account Service Accesses</relationshipLabel>
    <relationshipName>Project_Account_Service_Accesses</relationshipName>
    <type>Lookup</type>
</CustomField>