force-app/main/default/objects/ProjectAccountServiceAccess__c/fields/ProjectAccount__c.field-meta.xml
<CustomField>
    <fullName>ProjectAccount__c</fullName>
    <label>Project Account</label>
    <referenceTo>ProjectAccount__c</referenceTo>
    <relationshipLabel>Project Account Service Accesses</relationshipLabel>
    <relationshipName>Project_Account_Service_Accesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>