force-app/main/default/objects/ProjectAccountServiceAccess__c/fields/ProjectService__c.field-meta.xml
<CustomField>
    <fullName>ProjectService__c</fullName>
    <label>Project Service</label>
    <referenceTo>ProjectService__c</referenceTo>
    <relationshipLabel>Project Account Service Accesses</relationshipLabel>
    <relationshipName>Project_Account_Service_Accesses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>